--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,16 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.19.2",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/cli": "^4.1.11",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "tailwindcss": "^4.1.11",
+    "tailwindcss-animate": "^1.0.7",
     "tailwindcss-motion": "^1.1.1",
     "typescript": "^5"
   },
