--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "framer-motion": "^12.19.2",
     "next": "15.3.4",
     "react": "^19.0.0",
+    "react-calendly": "^4.4.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
